# fuzzamoto

./: CNAME  Cargo.toml  Dockerfile  Dockerfile.libafl  Dockerfile.libbitcoin  print.html  searchindex.js  searchindex.json  test_desocket.sh  test_desocket_integration.sh  test_libdesock.sh  test_libdesock_python.py
.github/bench/: smoke.yaml
.github/workflows/: benchmark-smoke.yml
doc/src/: SUMMARY.md
doc/src/contributing/: ir.md
doc/src/design/: assertions.md  ir.md
doc/src/usage/: cli.md
fuzzamoto/: Cargo.toml
fuzzamoto-cli/: Cargo.toml
fuzzamoto-cli/assets/bench/: compare.html  compare.js  run.html  run.js  suite.html  suite_report.js
fuzzamoto-cli/src/: main.rs
fuzzamoto-cli/src/commands/: benchmark.rs  init.rs  ir.rs  mod.rs
fuzzamoto-cli/src/utils/: nyx.rs
fuzzamoto-ir/: Cargo.toml  README.md
fuzzamoto-ir/src/: builder.rs  compiler.rs  instruction.rs  lib.rs  metadata.rs  operation.rs  variable.rs
fuzzamoto-ir/src/generators/: block.rs  compact_block.rs  mod.rs  taproot.rs  tx.rs  witness.rs
fuzzamoto-ir/src/minimizers/: mod.rs  nopping.rs
fuzzamoto-ir/src/mutators/: combine.rs  concat.rs  input.rs  mod.rs  (+2 more)
fuzzamoto-libafl/: Cargo.toml  README.md
fuzzamoto-libafl/src/: client.rs  fuzzer.rs  input.rs  instance.rs  main.rs  mutators.rs  options.rs  stages.rs
fuzzamoto-nyx-sys/src/: lib.rs  nyx-agent.c
fuzzamoto-scenarios/: Cargo.toml
fuzzamoto/src/: assertions.rs  connections.rs  lib.rs  libdesock_tests.rs  runners.rs  taproot.rs
scripts/: test-libbitcoin.sh
workloads/bitcoin-core-ir/: Dockerfile  bitcoind.sh  init.sh
(+17 files in other folders)
