[workspace]
resolver = "2"
members = [
    "fuzzamoto", "fuzzamoto-cli", "fuzzamoto-ir",
    "fuzzamoto-nyx-sys", "fuzzamoto-scenarios", "fuzzamoto-libafl"
]
exclude = [ "vendor/*" ]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Niklas Gögge <n.goeggi@gmail.com>"]
license = "MIT"
repository = "https://github.com/dergoegge/fuzzamoto"
